--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <input type="checkbox" name="skills" value="react"> React<br>
           </div>
         </div>
-        <button type="submit" id="post-btn" class="btn btn-dark">Post</button>
+        <button type="button" id="post-btn" class="btn btn-dark">Post</button>
       </form>
       </div>
 
@@ -71,17 +71,7 @@
             <h4>Intermediate Level Jobs</h4>
           </div>
           <div id="int-level">
-            <div class="alert alert-info">
-              <h5 class="alert-heading"><strong><span id="int-title"></span></strong></h5>
-              <p>Company name: <span id="int-comp-name"></span></p>
-              <p>Location: <span id="int-location"></span></p>
-              <ul>
-                <span id="int-skills"></span>
-              </ul>
-              <p>Additional skills: <span id="int-add-skills"></span></p>
-              <p>Description: <span id="int-post-desc"></span></p>
-              <p>Work condition: <span id="int-condition"></span></p>
-            </div>
+
           </div>
         </div>
 
@@ -90,17 +80,7 @@
             <h4>Advanced Level Jobs</h4>
           </div>
           <div id="adv-level">
-            <div class="alert alert-primary">
-              <h5 class="alert-heading"><strong><span id="adv-title"></span></strong></h5>
-              <p>Company name: <span id="adv-comp-name"></span></p>
-              <p>Location: <span id="adv-location"></span></p>
-              <ul>
-                <span id="adv-skills"></span>
-              </ul>
-              <p>Additional skills: <span id="adv-add-skills"></span></p>
-              <p>Description: <span id="adv-post-desc"></span></p>
-              <p>Work condition: <span id="adv-condition"></span></p>
-            </div>
+            
           </div>
         </div>
       </div>
