Update JS to properly push skill checkboxes to the array and update post formatting

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <form id="jobpost-form">
           <div class="form-group">
             <label class="labels" for="name">Company Name</label>
-            <input id="com-name" class="form-control" type="text">
+            <input id="com-name" class="form-control" type="text" required>
           </div>
           <div class="form-group">
             <label class="labels" for="title">Job Title</label>
-            <input id="job-title" class="form-control" type="text">
+            <input id="job-title" class="form-control" type="text" required>
           </div>
           <div class="form-group">
             <label class="labels">Job Difiiculty</label>
@@ -36,20 +36,20 @@
           </div>
           <div class="form-group">
             <label class="labels" for="title">Work Location</label>
-            <input id="location" class="form-control" type="text">
+            <input id="location" class="form-control" type="text" required>
           </div>
           <div class="form-group">
             <label class="labels" for="work-description">Job Description</label>
-            <input id="description" class="form-control" type="text">
+            <input id="description" class="form-control" type="text" required>
           </div>
           <div class="form-group">
             <div class="col-md-4">
             <label class="labels">Skills Needed</label><br>
-            <input type="checkbox" name="skills" value="html"> HTML<br>
-            <input type="checkbox" name="skills" value="css"> CSS<br>
-            <input type="checkbox" name="skills" value="Java Script"> JavaScript<br>
-            <input type="checkbox" name="skills" value="php"> PHP<br>
-            <input type="checkbox" name="skills" value="react"> React<br>
+            <input type="checkbox" name="skills" value="HTML"> HTML<br>
+            <input type="checkbox" name="skills" value="CSS"> CSS<br>
+            <input type="checkbox" name="skills" value="JavaScript"> JavaScript<br>
+            <input type="checkbox" name="skills" value="PHP"> PHP<br>
+            <input type="checkbox" name="skills" value="React"> React<br>
           </div>
         </div>
         <div class="row">
