Update button to a submit function and make fields required

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="row">
           <div class="col-sm-6">
-            <button type="button" id="post-btn" class="btn btn-dark">Post</button>
+            <button type="submit" id="post-btn" class="btn btn-dark">Post</button>
           </div>
           <div class="col-sm-6">
             <button type="button" id="post-close" class="btn btn-light">Cancel</button>
